feat(backend): `/schools/live` endpoint for searching school
implement new endpoint `/schools/live` to get information about
miejscowosc when live searching
